# cfe

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  TODO.md  castlecraft.html  eslint.config.cjs  index.html  package.json  pyproject.toml  release.py  search.js  setup.py
.github/workflows/: docs.yml  lint.yml  test.yml
castlecraft/: auth.html  auth.py  castlecraft.html  config.html  exceptions.html  exceptions.py  hooks.html  hooks.py  modules.txt  services.html  templates.html  tenant_management.html  tenant_management.py  utils.html
castlecraft/castlecraft/: doctype.html
castlecraft/castlecraft/doctype/: cfe_identity_provider.html  cfe_idp_jwt_aud.html  cfe_idp_user_claim.html  cfe_idp_user_role.html  cfe_user_claim.html  cfe_user_claim_map.html
castlecraft/castlecraft/doctype/cfe_identity_provider/: cfe_identity_provider.html  cfe_identity_provider.js  cfe_identity_provider.json  cfe_identity_provider.py  test_cfe_identity_provider.html  test_cfe_identity_provider.py
castlecraft/castlecraft/doctype/cfe_idp_jwt_aud/: cfe_idp_jwt_aud.html  cfe_idp_jwt_aud.json  cfe_idp_jwt_aud.py
castlecraft/config/: desktop.html  desktop.py  docs.html  docs.py
castlecraft/services/: oauth2.html  oauth2.py  settings.html  settings.py
castlecraft/templates/: pages.html
castlecraft/utils/: format.html  format.py
diagrams/: diagram.dia
tests/: conftest.py  test_auth.py  test_auth_helpers.py  test_auth_introspection.py  test_jwt_existing_user.py  test_jwt_invalid.py  test_jwt_new_user.py  test_jwt_userinfo.py
(+16 files in other folders)
